2018-06-09  Carl Hetherington  <cth@carlh.net>

	* Fix bad parsing of ASS lines embedded into FFmpeg files
	and containing commas.

	* Add option to open a DCP in the player (#1312).

2018-06-08  Carl Hetherington  <cth@carlh.net>

	* Add support for rotation and flipping of video sources,
	and auto-detect when this is necessary (#966).

2018-06-05  Carl Hetherington  <cth@carlh.net>

	* Don't allow the queue to get too big with repeat frames
	otherwise there's a long delay at the end of the job
	while they are written (#1317).

2018-06-04  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2018-05-29  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

2018-05-27  Carl Hetherington  <cth@carlh.net>

	* Support notifications on jobs finishing (#1286).

	* Updated it_IT translation from Felice D'Andrea.

2018-05-23  Carl Hetherington  <cth@carlh.net>

	* Fix failure to load image files from non-ASCII paths.

2018-05-18  Carl Hetherington  <cth@carlh.net>

	* Fix slow exports from DCP content (#1285).

2018-05-16  Carl Hetherington  <cth@carlh.net>

	* Add cancel button to DCP verification progress dialogue (#1294).

2018-05-15  Carl Hetherington  <cth@carlh.net>

	* Fix crash on enabling telecine filter.

	* Fix incorrect subtitle positioning in a VF when there are more than
	two consecutive reels with no subtitles.

	* Fix missing burnt-in / previewed subtitles containing ampersands.

2018-05-08  Carl Hetherington  <cth@carlh.net>

	* Look at subtitle colour and effect when deciding whether or not to
	re-make video (should fix #1290).

2018-05-07  Carl Hetherington  <cth@carlh.net>

	* Updated cs_CZ translation from Tomáš Begeni.

2018-04-29  Carl Hetherington  <cth@carlh.net>

	* Add command-line option to specify directory containing config (#1284).

2018-04-27  Carl Hetherington  <cth@carlh.net>

	* Fix incorrect container size when loading a OV/VF combination into the player.
