@@ -1,3 +1,7 @@
+2018-06-10  Carl Hetherington  <cth@carlh.net>
+
+	* Include Ls/Rs and Lfe in 5.1-to-stereo downmix in the player.
+
 2018-06-09  Carl Hetherington  <cth@carlh.net>
 
 	* Fix bad parsing of ASS lines embedded into FFmpeg files
